todas las etiquetas recibiendo el backend

--- a/clientefullstack/src/App.css
+++ b/clientefullstack/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
+
 }
+.div.detallespeluches{
+  display: flex;
+  flex-direction: row;
+}
+
 
 .App-logo {
   height: 40vmin;
