--- a/clientefullstack/src/App.css
+++ b/clientefullstack/src/App.css
@@ -42,3 +42,8 @@
     transform: rotate(360deg);
   }
 }
+
+@media screen and (min-width: 480px) {
+  #leftsidebar {width: 200px; float: left;}
+  #main {margin-left: 216px;}
+}
